rns-lang/tests/snapshots/err-parser-class_directive-header-name-comment_as_class_name.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.class     ; class name should be here, but is missing
.super java/lang/Object

----- STDOUT -----

----- STDERR -----
Error: missing class name in '.class' directive
   ╭─[ test_data/integration/err/parser/class_directive/header/name/comment_as_class_name.ja:1:7 ]
   │
 1 │ .class     ; class name should be here, but is missing
   │       │ 
   │       ╰─ expected a class name here
   │ 
   │ Note: Every class definition needs a name. Example: '.class public MyClass'
───╯
