rns-lang/tests/snapshots/err-parser-class_directive-header-name-newline_as_class_name.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.class public
.super java/lang/Object

----- STDOUT -----

----- STDERR -----
Error: missing class name in '.class' directive
   ╭─[ test_data/integration/err/parser/class_directive/header/name/newline_as_class_name.ja:1:14 ]
   │
 1 │ .class public
   │              │ 
   │              ╰─ expected a class name here
   │ 
   │ Note: Every class definition needs a name. Example: '.class public MyClass'
───╯
